Fix the guess to lettes compare logic, add replay link, wrap the pages with container

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -2,15 +2,21 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.container {
-  display: flex;  
-}
+.container-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-.letter {
+  .container-letters {
+    display: flex;  
+  }
+  
+  .letter {
     background-color: rgb(151, 151, 201);
     width: 20px;
     margin: 5px;
     padding: 5px;
     text-align: center;
-    
+  }
 }
